crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zip@make__failing-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/make/failing-exercise
---
- src
- src/Makefile
- src/main
- src/main.c
- src/source.c
- src/source.h

