crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zip@make__failing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/make/failing-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: 19208863a9780364d57e2de46ef0b14d144e78ac25f53463e9215836bd5a87e5
