crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zip@make__valgrind-failing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/make/valgrind-failing-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: fb42a43f95667107fd4b696ceadd19cda6595daa2c3afa825f53984fab4baa02
